fix:fix header overflow

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -4,6 +4,7 @@
 .header {
     background-image: url('@assets/images/header.png');
     background-size: 100%;
+    overflow: hidden;
 }
 
 .game {
